# meeting-room-v2

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py  viewer.py
backend/app/audio/: mic_capture.py  output.py  ring_buffer.py
backend/app/core/: config.py
backend/app/experiments/: README.md  file_replay.py  generate_tts_audio.py  run_file_replay.py
backend/app/experiments/experiment-realtime2/: README.md  audio_output.py  conversation_cli.py  prompts.py  realtime2_client.py
backend/app/experiments/experiment-soniox/: README.md  generate_tts_audio.py  run_file_replay.py
backend/app/experiments/experiment-soniox/scenarios/: four_speakers_short_overlap.json
backend/app/experiments/experiment-speaker-verification/: README.md
backend/app/experiments/results/: .gitkeep
backend/app/realtime/: openai_transcription.py  schemas.py
backend/app/soniox/: client.py
backend/app/speakers/: registry.py  stats.py
backend/app/speakers/verification/: base.py  service.py  workers.py
backend/app/voice_agent/: context.py  openai_realtime_client.py  orchestrator.py  prompts.py  realtime2_client.py
backend/tests/: test_audio_ring_buffer.py  test_speaker_verification_base.py  test_voice_agent_interrupt.py
docs/: DEVELOPMENT.md  MEETING_ROOM_V2_HANDOFF.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: main.ts  styles.css
frontend/src/experimental-viewer/: events.ts  viewer.ts
protocol/: README.md  ROOM_REALTIME_PROTOCOL.md
scripts/: dev.sh
