[project]
name = "meeting-room-v2-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "sounddevice>=0.5.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=14.0",
]

[project.scripts]
meeting-room-soniox = "app.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
