[project]
name = "meeting-room-v2-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "sounddevice>=0.5.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=14.0",
]

[project.optional-dependencies]
speaker-speechbrain = [
  "speechbrain>=1.0.3",
  "torch>=2.2",
  "torchaudio>=2.2",
]
speaker-wespeaker = [
  "onnxruntime>=1.18",
  "torch>=2.2",
  "torchaudio>=2.2",
  "wespeaker @ git+https://github.com/wenet-e2e/wespeaker.git",
]
speaker-both = [
  "onnxruntime>=1.18",
  "speechbrain>=1.0.3",
  "torch>=2.2",
  "torchaudio>=2.2",
  "wespeaker @ git+https://github.com/wenet-e2e/wespeaker.git",
]

[project.scripts]
meeting-room-soniox = "app.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
